remove scroll on html and body to prevent some browsers scrolls from flickering (#618)

--- a/src/style/globalStyle.scss
+++ b/src/style/globalStyle.scss
@@ -66,6 +66,7 @@ body {
   color: black;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
 }
 
 * {
